--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Page</title>
+    <title>Module 2 Solution</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Page Heading</h1>
+        <h1>Our Menu</h1>
     </header>
     <main>
-        <section id="chicken">
-            <div class="title">Chicken</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <section class="section" id="section1">
+            <div class="section-title">Chicken</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel urna a metus mollis dignissim.</p>
         </section>
-        <section id="beef">
-            <div class="title">Beef</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <section class="section" id="section2">
+            <div class="section-title">Beef</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel urna a metus mollis dignissim.</p>
         </section>
-        <section id="sushi">
-            <div class="title">Sushi</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <section class="section" id="section3">
+            <div class="section-title">Sushi</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel urna a metus mollis dignissim.</p>
         </section>
     </main>
 </body>
