--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 2 Solution</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="module2-solution/estilos.css">
 </head>
 <body>
     <header>
